# keystroke-dynamics-from-video

./: .gitignore  README.md  default.conf  pyproject.toml
src/: main.py  train.py
src/cbb/: __init__.py  cbb.py
src/cmds/: __init__.py  analyze.py  box.py  capture.py  kunit.py  train.py
src/config/: __init__.py  config.py
src/ibb/: __init__.py  ibb.py  kunit.py
src/isolation/: __init__.py  character.py  cursor.py
src/resnet/: __init__.py  predict.py  resnet.py  train.py
src/util/: __init__.py  data.py  keystroke.py  kunit.py  util.py
