[project]
name = "keystroke-dynamics-from-video"
version = "0.0.1"
description = ""
authors = [
    {name = "cyanjnpr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "keras (>=3.12.0,<4.0.0)",
    "tensorflow[and-cuda] (>=2.20.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
